src/objects/NQT_Document__c.object
<CustomObject>
    <description>Upload NQT Document</description>
    <fields>
        <fullName>NQT_CPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPR</label>
        <referenceTo>CPR__c</referenceTo>
        <relationshipLabel>Upload Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>CIQ Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Quote Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Quote PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final SOW PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWR Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_File_Description__c</fullName>
        <label>File Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visible_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to make document confidential</description>
        <inlineHelpText>Select to make document visible to Customer.</inlineHelpText>
        <label>Visible to Customer</label>
        <type>Checkbox</type>
    </fields>
    <label>NQT Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upload Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>